# aidos4

./: .coderabbit.yaml  .gdbinit  .gitignore  .gitpod.Dockerfile  CMakeLists.txt  Doxyfile  README.md  check_toolchain.cmake
scripts/: Install_Stage2_info.py
src/: CMakeLists.txt
src/bootloader/: CMakeLists.txt
src/bootloader/stage1/: CMakeLists.txt  debug.ld  linker.ld  main.asm
src/bootloader/stage2/: CMakeLists.txt  Main.cpp  elf.cpp  elf.hpp  globals.hpp  linker.ld  main.asm  memory.cpp  memory.hpp  minmax.hpp  start.asm  stdio.cpp  stdio.hpp  string.hpp
src/bootloader/stage2/Init/: init16.asm  init32.asm  init64.asm
src/bootloader/stage2/dev/: driver.hpp
src/bootloader/stage2/dev/io/: io.hpp
src/bootloader/stage2/dev/io/disk/: ata.cpp  ata.hpp
src/bootloader/stage2/dev/io/fs/: detect.cpp  fs.hpp
src/bootloader/stage2/dev/io/fs/fat/: fat.hpp  fat12.cpp  fat_common.cpp
src/bootloader/stage2/dev/io/text/: textdriver.hpp
src/bootloader/stage2/dev/io/text/vga/: vga.cpp  vga.hpp
src/bootloader/stage2/x86/: io.hpp  memory.asm
src/kernel/: CMakeLists.txt  _init.asm  kernel.cpp  linker.ld  memory.cpp  memory.hpp
src/kernel/dev/acpi/: acpi.cpp  acpi.hpp  rsdp.cpp
